--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,47 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout>
-	<Welcome />
+<Layout title="よろずや本舗｜トップページ">
+
+  <section class="px-4 py-12 max-w-3xl mx-auto">
+    <h2 class="text-2xl font-semibold mb-4">よろずや本舗からごあいさつ</h2>
+    <p class="text-gray-800">
+      よろずや本舗合同会社は、日本のものづくりを応援します。</p>
+
+	<pre class="whitespace-pre-wrap">
+
+
+	よろずや本舗です。
+ 
+	良いもの、気に入ったものを大切に使うことは生活を豊かにします。
+ 
+	それを目にするだけで心が癒やされ、とても落ち着く。
+	そんなものに囲まれた生活は理想です。
+
+	そこにあるものは、単なる「もの」ではなく、
+	形のない想いがこもっている。
+ 
+	だからこそ、果てしない愛着が湧くのではないでしょうか？
+
+	よろずや本舗は、
+
+	これまでのわたしの知識や経験が
+	良いものを探したい方々のお役に立つのなら、
+
+	力の限り手を添えたい。
+
+	そういう存在であり続けたいと思っています。
+	</pre>
+
+  </section>
+
+  <section class="px-4 py-12 max-w-3xl mx-auto">
+    <h2 class="text-2xl font-semibold mb-4">提供する主なサービス</h2>
+    <ul class="list-disc list-inside text-gray-800 space-y-2">
+      <li>製造業コンサルティング</li>
+      <li>物販事業</li>
+      <li>通訳・翻訳サービス</li>
+    </ul>
+  </section>
 </Layout>
